@@ -1,3 +1,4 @@
+[2017-07-06 23:27:11 +0200]  Removed package (deepin)                                                   karasu      {105bcdb8}
 [2017-07-06 23:26:38 +0200]  Removed package                                                            karasu      {97b8e7c4}
 [2017-07-06 16:23:12 +0200]  Install tlp by default                                                     karasu      {ebc17b01}
 [2017-07-06 16:20:58 +0200]  Install tlp by default. Fixes #759                                         karasu      {375129cc}
